Primeiro commit. Iniciando com ASPNET MVC

--- a/appsettings.json
+++ b/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-DemoMVC-862a2038-3344-440a-86bf-42430bdf4c36;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "insira seu bdd aqui"
   },
   "Logging": {
     "LogLevel": {
